@@ -35,6 +35,7 @@ Bugs fixed
 * #771: Fix latex output doesn't set tocdepth
 * #1820: On Windows, console coloring is broken with colorama version 0.3.3.
   Now sphinx use colorama>=0.3.5 to avoid this problem.
+* #2072: Fix footnotes in chapter-titles do not appear in PDF output
 
 Release 1.3.3 (released Dec 2, 2015)
 ====================================
